# single-header

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: args.rs  cmake.rs  include_line.rs  inline_paths.rs  line_zero.rs  main.rs  process.rs  system_paths.rs  utils.rs
