[package]
name = "single-header"
version = "0.1.5"
edition = "2021"
license-file = "LICENSE"
repository = "http://github.com/DaemonSnake/single-header"
description = "a rust command line utility to generate portable C/C++ single header file"
readme = "README.md"
authors = ["DaemonSnake <bastienPenava@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
lazy_static = "1.4.0"
radix_trie = "0.2.1"
regex = "1.10.2"
which = "6.0.0"
